Add profile (#42)
* add profile to user.
